using System;

class Goal
{   
    protected int _score;
    protected Boolean _completed;
    protected string _name;
    protected List<string> _goal;

  
    
    protected Goal(string name)
    {

    }

    protected string GetName(string[])
    {

    }


    protected Boolean IsGoalComplet()
    {

    }

    protected int GetPoints()
    {

    }

    protected void SetCompleted(Boolean completed)
    {

    }
    protected int CalculatePoints()
    {

    }
    protected void RecordEvent()
    {

    }
    protected int GetScore()
    {

    }
    protected void ListGoals()
    {
        
    }

}